# ShaderTestFramework

./: .editorconfig  .gitignore  .linkspector.yml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  shields.json
examples/: CMakeLists.txt
examples/Catch2Example/: CMakeLists.txt
examples/Catch2Example/shader/: ShaderHeader.hlsli  ShaderTest.hlsl
examples/Catch2Example/test/: Catch2Tests.cpp
examples/Ex0_MinimalShaderTest/: CMakeLists.txt  MinimalShaderTest.cpp
examples/Ex1_FailingPowTests/: CMakeLists.txt  PowTests.cpp
examples/Ex2_VirtualShaderPaths/: CMakeLists.txt  VirtualShaderPaths.cpp
examples/Ex2_VirtualShaderPaths/ShaderCode/: MyCoolHLSLFunction.hlsli  MyShaderTests.hlsl
examples/Ex3_ScenariosAndSections/: CMakeLists.txt  ScenariosAndSections.cpp
examples/Ex3_ScenariosAndSections/ShaderCode/: MyArray.hlsli  MyArrayTests.hlsl  Optional.hlsli  OptionalTests.hlsl
examples/Ex4_Asserts/: Asserts.cpp  CMakeLists.txt
examples/Ex4_Asserts/ShaderCode/: AssertTests.hlsl
examples/Ex5_CompileTimeTests/: CMakeLists.txt  CompileTimeTests.cpp
examples/Ex5_CompileTimeTests/ShaderCode/: ConditionalType.hlsli  ConditionalTypeTests.hlsl
examples/Ex6_ByteReadersAndWriters/: ByteReadersAndWriters.cpp  CMakeLists.txt
examples/Ex6_ByteReadersAndWriters/ShaderCode/: FailingAssertWithByteReader.hlsl  FailingAssertWithByteWriter.hlsl  FailingAssertWithMultiTypeByteReader.hlsl  FailingAssertWithoutByteReader.hlsl  FailingFundamentalTypeTests.hlsl
examples/Ex7_Casters/: CMakeLists.txt  Casters.cpp
examples/Ex7_Casters/ShaderCode/: TypeWithCastToBool.hlsl
examples/Ex8_ConstantBuffers/: CMakeLists.txt  ConstantBuffers.cpp
examples/Ex8_ConstantBuffers/ShaderCode/: TestsUsingConstantBuffers.hlsl
examples/MinimalShaderTest/: CMakeLists.txt  MinimalShaderTest.cpp
src/: CMakeLists.txt
src/Private/D3D12/: BindlessFreeListAllocator.cpp  CommandAllocator.cpp  CommandEngine.cpp  CommandList.cpp  CommandQueue.cpp  DescriptorHeap.cpp  DescriptorRingAllocator.cpp  Fence.cpp  GPUDevice.cpp  GPUResource.cpp
src/Private/D3D12/Shader/: CompiledShaderData.cpp  PipelineState.cpp  RootSignature.cpp  ShaderBinding.cpp  ShaderCompiler.cpp  ShaderReflectionUtils.cpp  VirtualShaderDirectoryMappingManager.cpp
src/Private/Framework/: ShaderTestCommon.cpp  ShaderTestDescriptorManager.cpp  ShaderTestDriver.cpp  ShaderTestFixture.cpp  ShaderTestShader.cpp  TestDataBufferProcessor.cpp  TestDataBufferStructs.cpp  TypeByteReader.cpp
src/Private/Stats/: StatSystem.cpp
src/Public/: Platform.h
src/Public/Container/: RingBuffer.h
src/Public/D3D12/: BindlessFreeListAllocator.h  CommandAllocator.h  CommandEngine.h  CommandList.h  CommandQueue.h  Descriptor.h  DescriptorHeap.h  Fence.h  FencedResourcePool.h  GPUDevice.h  GPUResource.h
src/Public/D3D12/Shader/: CompiledShaderData.h  PipelineState.h  RootSignature.h  ShaderBinding.h  ShaderCompiler.h  ShaderHash.h  ShaderReflectionUtils.h  VirtualShaderDirectoryMappingManager.h
src/Public/Framework/: HLSLTypes.h  ShaderTestCommon.h  ShaderTestDescriptorManager.h  ShaderTestDriver.h  ShaderTestFixture.h  ShaderTestShader.h  TestDataBufferProcessor.h  TypeByteReader.h
src/Public/Stats/: ScopedObject.h  StatSystem.h
src/Public/Utility/: Concepts.h  EnumReflection.h  Exception.h  Expected.h  Float.h  Lambda.h  Math.h  Object.h  Pointer.h  Time.h  TransparentStringHash.h  Tuple.h  TypeList.h
src/Sandbox/: CMakeLists.txt  main.cpp
src/Shader/STF/: ByteReaderTraits.hlsli  SectionManagement.hlsli  ShaderTestFramework.hlsli
src/Shader/TTL/: byte_writer.hlsli  caster.hlsli  container_wrapper.hlsli  macro.hlsli  memory.hlsli  models.hlsli  string.hlsli  type_traits.hlsli
src/ShaderTestFramework/: CMakeLists.txt  ShaderCompiler.cpp  ShaderTestFixture.cpp
src/ShaderTestFramework/Private/: ShaderTestFixture.cpp
src/ShaderTestFramework/Public/: D3D12AgilityDefinitions.h  EnumReflection.h  Exception.h  Platform.h  Pointer.h  ShaderCompiler.h  ShaderEnums.h  ShaderTestFixture.h  Utility.h
src/ShaderTestFramework/include/: ShaderCompiler.h  ShaderEnums.h  ShaderTestFixture.h  Utility.h
test/: BasicTests.cpp  CMakeLists.txt  DescriptorFreeListAllocatorTests.cpp  DescriptorTests.cpp  FunctionTraitsTests.cpp  Minimal.runsettings  ShaderCompilerTests.cpp  ShaderTestFixtureTests.cpp  TypeListTests.cpp  TypeTraitsTests.cpp
test/Container/: RingBufferTests.cpp
test/D3D12/: CommandEngineTests.cpp  DescriptorRingAllocatorTests.cpp
test/D3D12/Shader/: ShaderCompilerTests.cpp  VirtualShaderDirectoryMappingManagerTests.cpp
test/Framework/: AssertBufferProcessorTests.cpp  HLSLTypesTests.cpp  ShaderTestFixtureTests.cpp
test/Framework/HLSLFramework/: BasicShaderTests.cpp
test/Private/Container/: RingBufferTests.cpp
test/Private/D3D12/: BindlessFreeListAllocatorTests.cpp  CommandEngineTests.cpp  CommandListTests.cpp  CommandQueueTests.cpp  DescriptorFreeListAllocatorTests.cpp  DescriptorHeapTests.cpp  DescriptorRingAllocatorTests.cpp  DescriptorTests.cpp  FencedResourcePoolTests.cpp
test/Private/Framework/: AssertBufferProcessorTests.cpp  HLSLTypesTests.cpp  SectionsInHLSLProofOfConceptTests.cpp  ShaderTestDescriptorManagerTests.cpp  ShaderTestFixtureTests.cpp  TestDataBufferLayoutTests.cpp  TestDataBufferProcessorTests.cpp
test/Private/Stats/: ScopedObjectTests.cpp  StatSystemTests.cpp
test/Private/TestUtilities/: Noisy.cpp  NoisyTests.cpp
test/Private/Utility/: AlignedOffsetTests.cpp  ConceptsTests.cpp  EnumReflectionTests.cpp  FunctionTraitsTests.cpp  LambdaTests.cpp  ObjectTests.cpp  PointerTests.cpp  TupleTests.cpp  TypeListTests.cpp  TypeTraitsTests.cpp
test/Public/TestUtilities/: Noisy.h
test/Shader/Framework/: ShaderFrameworkHLSLProofOfConceptTests.hlsl
test/Shader/HLSLFrameworkTests/: BasicShaderTests.hlsl  ConceptsTests.hlsl  FlattenIndex.hlsl  ModelsTests.hlsl  PerThreadScratchDataByteWriterTests.hlsl  SectionHierarchyByteWriterTests.hlsl  SectionManagement.hlsl  ThreadDimensionTests.hlsl  ThreadIdRegistrationTests.hlsl  TypeTraitsTests.hlsl
test/Utility/: ConceptsTests.cpp  LambdaTests.cpp
(+467 files in other folders)
