cmake_minimum_required(VERSION 3.25)

project(ShaderTestFrameworkExamples LANGUAGES CXX)

add_subdirectory(Catch2Example)
add_subdirectory(Ex0_MinimalShaderTest)
add_subdirectory(Ex1_FailingPowTests)
add_subdirectory(Ex2_VirtualShaderPaths)
add_subdirectory(Ex3_ScenariosAndSections)
add_subdirectory(Ex4_Asserts)
add_subdirectory(Ex5_CompileTimeTests)